# White-belt

./: .gitignore  CMakeLists.txt  README.md
Final_task/: CMakeLists.txt  main.cpp
Week_1/1_min_string/: Task.md  main.cpp
Week_1/2_equation/: Task.md  main.cpp
Week_1/3_division/: Task.md  main.cpp
Week_1/4_cost_calculation/: Task.md  main.cpp
Week_1/5_even_numbers/: Task.md  main.cpp
Week_1/6_second_occurrence/: Task.md  main.cpp
Week_1/7_gcd/: Task.md  main.cpp
Week_1/8_binary_numbers/: Task.md  main.cpp
Week_2/1_to_do_list/: main.cpp
Week_2/2_anagramms/: main.cpp
Week_2/3_capitals_dict/: main.cpp
Week_2/4_bus_routes/: main.cpp
Week_2/5_bus_routes_2/: main.cpp
Week_2/6_unique_strings/: main.cpp
Week_2/7_print_map_values/: main.cpp
Week_2/8_sinonyms/: main.cpp
Week_2/9_bus_routes_3/: main.cpp
Week_2/functions/factorial/: Task.md
Week_2/functions/isPalindrom/: Task.md  ispalindrom.cpp
Week_2/functions/moveStrings/: Task.md  movestrings.cpp
Week_2/functions/palindromFilter/: Task.md  palindromFilter.cpp
Week_2/functions/reverse/: Task.md  reverse.cpp
Week_2/functions/reverse_2/: Task.md  reverse.cpp
Week_2/functions/updateIfGreater/: Task.md  updateifgreater.cpp
Week_2/map/anagramms/: Task.md  main.cpp
Week_2/map/bus_routes/: Task.md  main.cpp
Week_2/map/bus_routes_2/: Task.md  main.cpp
Week_2/map/capitals_dict/: Task.md  main.cpp
Week_2/sets/bus_routes_3/: Task.md  main.cpp
Week_2/sets/map_values/: Task.md  main.cpp
Week_2/sets/sinonyms/: Task.md  main.cpp
Week_2/sets/unique_strings/: Task.md  main.cpp
Week_2/vector/average_temperature/: Task.md
Week_2/vector/queue/: Task.md  main.cpp
Week_2/vector/todo_list/: Task.md  main.cpp
Week_3/1_sort/: main.cpp
Week_3/7_name_history_3/: main.cpp
Week_3/8_incognizable/: main.cpp
Week_3/algorithms/sort_numbers/: Task.md  main.cpp
Week_3/algorithms/sort_strings/: Task.md  main.cpp
Week_3/constructors/incognizable/: Task.md  main.cpp
Week_3/constructors/name_history_3/: Task.md  main.cpp
Week_3/constructors/revers_string/: Task.md  main.cpp
Week_3/structs_and_classes/name_history/: Task.md  main.cpp
Week_3/structs_and_classes/name_history_2/: Task.md  main.cpp
Week_3/structs_and_classes/sorted_strings/: Task.md  main.cpp
Week_4/12_ack_time_server/: main.cpp
Week_4/1_lecture_title/: main.cpp
Week_4/2_function/: main.cpp
Week_4/6_read_csv_file/: input.txt
Week_4/8_2_rational_2/: main.cpp
Week_4/exceptions/ack_time_server/: Task.md
Week_4/exceptions/exception/: Task.md  main.cpp
Week_4/exceptions/rational_6/: Task.md
Week_4/exceptions/rational_7/: Task.md  main.cpp
Week_4/files_and_streams/print_file/: Task.md  main.cpp
Week_4/files_and_streams/print_file_2/: Task.md  input.txt
Week_4/files_and_streams/read_csv_file/: Task.md  main.cpp
Week_4/files_and_streams/students/: Task.md  main.cpp
Week_4/overload/: Task.md
Week_4/overload/rational_1/: main.cpp
Week_4/overload/rational_3/: main.cpp
Week_4/overload/rational_4/: main.cpp
Week_4/structs_and_classes/function/: Task.md
Week_4/structs_and_classes/function_2/: Task.md  (+1 more)
Week_5/final_task/: Task.md  main.cpp
week_2_task_10/: main.cpp
week_2_task_12/: main.cpp
week_2_task_13/: main.cpp  week_2_task_13.pro.user.d2263b5  week_2_task_13.pro.user.e37444b
week_2_task_14/: main.cpp  week_2_task_14.pro.user.d2263b5  week_2_task_14.pro.user.e37444b
week_2_task_15/: main.cpp  week_2_task_15.pro.user.d2263b5  week_2_task_15.pro.user.e37444b
week_2_task_16/: main.cpp  week_2_task_16.pro.user.d2263b5  week_2_task_16.pro.user.e37444b
week_2_task_17/: week_2_task_17.pro.user.d2263b5  week_2_task_17.pro.user.e37444b
week_2_task_18/: week_2_task_18.pro.user.d2263b5  week_2_task_18.pro.user.e37444b
week_3_task_2/: main.cpp
week_3_task_3/: main.cpp
week_3_task_4/: main.cpp
week_3_task_5/: main.cpp  week_3_task_5.pro.user.d2263b5  week_3_task_5.pro.user.e37444b
week_3_task_6/: main.cpp
week_4_task_1/: CMakeLists.txt
week_4_task_10/: CMakeLists.txt  main.cpp
week_4_task_11/: CMakeLists.txt
week_4_task_12/: CMakeLists.txt
week_4_task_2/: CMakeLists.txt
week_4_task_3/: CMakeLists.txt
week_4_task_4_1/: CMakeLists.txt
week_4_task_4_2/: CMakeLists.txt  main.cpp
week_4_task_5/: CMakeLists.txt  main.cpp
week_4_task_6/: CMakeLists.txt
week_4_task_7/: CMakeLists.txt
week_4_task_8_1/: CMakeLists.txt
week_4_task_8_2/: CMakeLists.txt
week_4_task_8_3/: CMakeLists.txt
week_4_task_8_4/: CMakeLists.txt
week_4_task_8_5/: CMakeLists.txt  main.cpp
week_4_task_9/: CMakeLists.txt
(+1 files in other folders)
