cmake_minimum_required(VERSION 3.12)
project(coursera)

set(CMAKE_CXX_STANDARD 14)

add_executable(coursera
        week_2_task_10/main.cpp
        week_2_task_11/main.cpp
        week_2_task_12/main.cpp
        week_2_task_13/main.cpp
        week_2_task_14/main.cpp
        week_2_task_15/main.cpp
        week_2_task_16/main.cpp
        week_2_task_17/main.cpp
        week_2_task_18/main.cpp
        week_3_task_1/main.cpp
        week_3_task_2/main.cpp
        week_3_task_3/main.cpp
        week_3_task_4/main.cpp
        week_3_task_5/main.cpp
        week_3_task_6/main.cpp
        week_3_task_7/main.cpp
        week_3_task_8/main.cpp)
